--- a/ScratchWork/Parsing-QSF-exploration.Rmd
+++ b/ScratchWork/Parsing-QSF-exploration.Rmd
@@ -80,10 +80,12 @@ questions <- purrr::keep(survey_elements, ~ .x[["Element"]]=="SQ") %>%
 
 At this point we have created one list of all the questions excluding the ones in the trash, and a second list with the blocks excluding the trash block. The next step in get_setup is to split the side-by-side questions. I'm going to explore to see if we can split these more efficiently and with human readable text instead of trying to use all of the complicated block indexing.
 
-```{r split_sBS_new}
+```{r split_sBS_new_1}
 
 #Keep only the side-by-side questions for this exploration
 sbs <- keep(questions, ~.x[["Payload"]][["QuestionType"]]=="SBS") 
+
+#First step will be splitting a single question, then we can work on doing this for all and re-inserting to the list.
 
 sbs_sample <- sbs[[1]]
   #Get just hte Payload for each of these questions, since this is what we actually need
@@ -98,11 +100,14 @@ addlq <- pluck(sbs_sample_split, "AdditionalQuestions") %>%
   #There's an issue with the "#" symbol, so replace with underscore in the question name; may need to change this later
   set_names(map_chr(.,~ str_replace(.x[["QuestionID"]], "#","_"))) 
 
-##Need to keep working on this
 
-
+#Now we also want to pull the main quesiton information without the additinal questions part
+#Do use this using modify_at to remove the AdditionalQuestions list element by reassinging to NULL
+mainq <- modify_at(sbs_sample_split, "AdditionalQuestions", ~NULL)
 
 ```
+
+Now we have separated the side-by-side question into a main question part.
 
 ### Creating response column dictionary from QSF
 
@@ -317,7 +322,8 @@ Existing function for splitting side_by_side questions. This is for reference cu
 ### split_side_by_sides
 
 ```{r split_side_by_sides}
-#This is the code to create the function splitting side-by-side questions. It will be tacked at a later date.
+#This is the existing code to create the function splitting side-by-side questions.
+#It is included here for reference during the development/revision process.
 
 split_side_by_sides <- function(questions, blocks)
 {
